--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ body.result {
         border-radius: 45px;
         border-top-right-radius: 0px;
         border-top-left-radius: 0px;
+        border: none;
         border-top: 1px dashed black;
     }
 }
